kube/deployment.yaml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: jb28-helloworld
spec:
  replicas: 1
  template:
    metadata:
      labels:
        name: jb28-helloworld
    spec:
      containers:
      - name: helloworld-nodejs
        image: helloworld:v1
        imagePullPolicy: IfNotPresent
        ports:
          - containerPort: 4000
