kube/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    name: helloworld-service
  name: helloworld-service
spec:
  ports:
  - name: exposed-port
    port: 80
    targetPort: 4000
  selector:
    name: helloworld
